k8s/apps/portfolio/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`portfolio.tugy.dev`)
      kind: Rule
      services:
        - name: portfolio
          port: 80
